--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is for learning jwt based authentication and autherisation, MongoDB database is used as database. ",
   "main": "index.js",
   "scripts": {
-    "test": "node --watch index.js"
+    "start": "node --watch index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
